--- a/resources/views/pics/form.edge
+++ b/resources/views/pics/form.edge
@@ -1,13 +1,13 @@
 <form action="" method="post" enctype="multipart/form-data" class="flex flex-col gap-5 w-1/2 border-2 border-border rounded bg-second_background py-5 px-5 mt-2">
-    <section>
+    {{--  <section>
         @!component('components/input', {
             label: 'Categorie',
             name: 'categorie_pics_id',
-            value: pic.categorie_pics_id,
-            options: categorie_pics.reduce((acc, c) => ({ ...acc, [c.id]: c.name }), {})
+            value: pic.categories_pics_id,
+            options: categories_pics
         })
-        <a href="{{route('categories.create')}}">Ajouter une categorie</a>
-    </section>
+        <a href="{{route('pics.create')}}">Ajouter une categorie</a>
+    </section>  --}}
 
     <section class="flex gap-5">
         <div>
