--- a/resources/views/pannel/form.edge
+++ b/resources/views/pannel/form.edge
@@ -1,43 +1,57 @@
-<form action="" method="post" enctype="multipart/form-data" class="flex flex-col gap-5 w-1/2 border-2 border-border rounded bg-second_background py-5 px-5 mt-2">
-    <section>
-            @!component('components/input', {
-                label: 'Titre',
-                name: 'title',
-                value: cour.title,
-                placeholder: 'Titre'
-            })
-    </section>
+@layout('layout')
 
-    <section>
-        @!component('components/input', {
-            label: 'Categorie',
-            name: 'categoryId',
-            value: cour.category_id,
-            options: categories.reduce((acc, c) => ({ ...acc, [c.id]: c.name }), {})
-        })
-        <a href="{{route('categories.create')}}">Ajouter une categorie</a>
-    </section>
+@section('body')
+<div class="relative flex justify-center">
+    <svg xmlns='http://www.w3.org/2000/svg' class="bg-gradient-to-b from-special_background ..." width='100%' height='100%' viewBox='0 0 1600 800'></svg>
+    <main class="container mx-auto fixed top-0">
+        
+        @!component('components/navbar_v2')
+        
+        <form action="" method="post" enctype="multipart/form-data" class="flex flex-col gap-5 w-1/2 border-2 border-border rounded bg-second_background py-5 px-5 mt-2">
+            <section>
+                    @!component('components/input', {
+                        label: 'Titre',
+                        name: 'title',
+                        value: cour.title,
+                        placeholder: 'Titre'
+                    })
+            </section>
 
-    <section class="flex gap-5">
-        <div>
-            @!component('components/input', {
-                label: 'Fichier PDF',
-                name: 'pdf_file',
-                type: 'file',
-                value: cour.file
+            <section class="flex justify-between items-end">
+                <div class="w-3/4">
+                    @!component('components/input', {
+                        label: 'Categorie',
+                        name: 'categoryId',
+                        value: cour.category_id,
+                        options: categories.reduce((acc, c) => ({ ...acc, [c.id]: c.name }), {})
+                    })
+                </div>
+                <a class="text-special font-second_text mb-2" href="{{route('categories.create')}}">Ajouter une categorie</a>
+            </section>
+
+            <section class="flex gap-5">
+                <div>
+                    @!component('components/input', {
+                        label: 'Fichier PDF',
+                        name: 'pdf_file',
+                        type: 'file',
+                        value: cour.file
+                    })
+                    <label for="pdf_file" class="text-hover underline font-title_text">Choisir un fichier</label>
+                </div>
+                @if(cour.file)
+                    <div src="upload/{{ cour.file }}">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" data-slot="icon" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m2.25 0H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z" />
+                        </svg>
+                        <p>{{ cour.file }}</p>
+                    </div>
+                @end
+            </section>
+            @!component('components/button', {
+                title: 'Sauvegarder',
             })
-            <label for="pdf_file" class="text-hover underline font-title_text">Choisir un fichier</label>
-        </div>
-         @if(cour.file)
-            <div src="upload/{{ cour.file }}">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" data-slot="icon" class="w-6 h-6">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m2.25 0H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z" />
-                </svg>
-                <p>{{ cour.file }}</p>
-            </div>
-        @end
-    </section>
-    @!component('components/button', {
-        title: 'Sauvegarder',
-    })
-</form>
+        </form>
+    </main>
+</div>
+@endsection
